# metal-in-leipzig

./: .gitignore  .minify.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  events.sass  index.html  layout.sass  mehr.html  noch_mehr.html  recht.html  style.css  viel_mehr.html
docs/: CNAME
flyer/: 00b8d9ddf08b104d.avif  01313a15fa0f2f09.avif  0176699d1ebbdc39.avif  027023b6ce014ed2.avif  02f6a2c3df268790.avif  031ba35ff58f298d.avif  0364de4f21a090c2.avif  0633577a169d7137.avif  069f6d932eb7fc8c.avif  092542d170555f23.avif  09fe654952bae6f7.avif  0a8ab65f8333cfff.avif  0bba7ca78f0b7668.avif  0ca7db0c18f4ba47.avif  0d08104d8a416de0.avif  1007738736630261011.avif  1008352247387283193.avif  1015462769904267761.avif  1017842417951806694.avif  1018101638324676208.avif  1018236425660978137.avif  102701621995837425.avif  1043475930095297678.avif  1052882796527940381.avif  1053831786521443719.avif  1077071562142767039.avif  1084f95f8c43586a.avif  1085376673276469785.avif  1086156097937569983.avif  10b4dadbac5b0566.avif  1104271698399084852.avif  1104407517045265560.avif  1106398229715939861.avif  1146545838187475613.avif  1146961636619834661.avif  1160070391926236047.avif  1162403157946864875.avif  1171133172524725322.avif  1196172670199805531.avif  1201695789327750456.avif  (+1371 more)
js/: filter.js
public/: events.sass  index.html  layout.sass  sitemap.txt  style.css  style.sass
src/: Dockerfile  Event.rs  TODOS  bootstrap.php  event.rs  generate.php  main.rs  renderer.rs  site.rs  tools.rs
src_php/: Dockerfile  generate.php
style/: events.sass  layout.sass  (+1 more)
(+142 files in other folders)
