[package]
name = "metal-in-leipzig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
handlebars =  "4.3"
html-escape = "0.2"
jpeg-decoder = "0.2"
lazy_static = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
twox-hash = "1"
