[package]
name = "metal-in-leipzig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
handlebars =  "4.3"
html-escape = "0.2"
jpeg-decoder = "0.3"
lazy_static = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "native-tls", "native-tls-vendored", "native-tls-alpn", "gzip", "deflate"] }
serde = "1.0"
serde_json = "1.0"
twox-hash = "1"
urlencoding = "2.1.3"
